<resources>
    <string name="app_name">Secretário_Digital</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--RegistroDeDizimoFragment-->
    <string name="word_dizimos">Dízimos</string>
    <string name="word_nome">Nome</string>
    <string name="word_null">null</string>
    <string name="text_dizimo">Registro de dízimos</string>
    <string name="text_info_dizimo">Respectivamente, informe abaixo quem foi o dizimista, o valor do dízimo e a data em que foi realizado o dízimo</string>
    <string name="word_registrar">Registrar</string>
    <string name="text_nome">Nome</string>
    <string name="text_valor">Valor</string>
    <string name="text_data">Data</string>
    
    <!--ListaDeDizimoFragment-->
    <string name="text_nenhum_dizimo">Nenhum dízimo registrado nesse período!</string>
    <string name="erro_db">Não foi possível recuperar os dados. Tente novamente mais tarde!</string>
    <string name="word_carregando">Carregando...</string>


    <!--Bottom Sheet Dialog-->
    <string name="text_escolha">Selecione o dizimista</string>
    <string name="text_nome_dizimista">Informe o nome do dizimista!</string>
    <string name="text_valor_dizimo">Informe um valor válido para o dízimo!</string>
    <string name="text_data_dizimo">Informe a data em que foi realizado o dízimo!</string>
    <string name="text_data_invalida_dizimo">Informe uma data válida!</string>
    <string name="text_ano_informado_maior">O ano informado é maior do que o atual!</string>
    <string name="text_mes_informado_maior">O mês informado é maior do que o atual!</string>
    <string name="text_dia_informado_maior">O dia informado é maior do que o atual!</string>
    <string name="text_ano_informado_menor">Não é possível informar um ano anterior a 2000!</string>
    <string name="text_ano_invalido">Informe um ano válido!</string>
    <string name="text_mes_invalido">Informe um mês válido!</string>
    <string name="text_dia_invalido">Informe um dia válido!</string>
    <string name="text_dia_nao_existe">O mês escolhido não possui esse dia!</string>
    <string name="text_dizimo_registrado">O dízimo foi registrado com sucesso!</string>
    <string name="text_erro_db">Não conseguimos recuperar os dízimos deste mês. Tente novamente mais tarde!</string>
    <string name="text_conexao_internet">Você não está conectado à internet</string>

    <string name="word_entendi">Entendi</string>
    <string name="word_atençao">Atenção</string>

    <!--Dias do mês-->
    <string name="word_janeiro">Janeiro</string>
    <string name="word_fevereiro">Fevereiro</string>
    <string name="word_março">Março</string>
    <string name="word_abril">Abril</string>
    <string name="word_maio">Maio</string>
    <string name="word_junho">Junho</string>
    <string name="word_julho">Julho</string>
    <string name="word_agosto">Agosto</string>
    <string name="word_setembro">Setembro</string>
    <string name="word_outubro">Outubro</string>
    <string name="word_novembro">Novembro</string>
    <string name="word_dezembro">Dezembro</string>
    


</resources>