<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.secretario_digital.RegistroDeDizimoFragment"
    android:id="@+id/fragment_registro_de_dizimo"
    android:background="@color/darker_blue">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar_registro_de_dizimo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/default_size"
        android:paddingVertical="@dimen/double_of_default_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_info_dizimo"
                android:textAlignment="center"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/bg_btn_choose"
                android:layout_marginTop="@dimen/double_of_default_size"
                android:drawableStart="@drawable/ic_small_arrow"
                android:drawablePadding="12dp"
                android:hint="@string/text_nome"
                android:textAllCaps="false"
                android:textColorHint="@color/light_blue"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:gravity="center_vertical|start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_2"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/text_valor"
                app:startIconDrawable="@drawable/ic_small_arrow"
                app:startIconTint="@color/pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_nome">

                <com.marcoscg.currencyedittext.CurrencyEditText
                    android:id="@+id/edit_dizimo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="13"
                    android:textColor="@color/light_blue"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="12dp"
                android:hint="@string/text_data"
                app:startIconDrawable="@drawable/ic_small_arrow"
                app:startIconTint="@color/pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_2">

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/edit_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white"
                    app:mask="__/__/____"
                    app:maskCharacter="_"
                    app:maskStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/double_of_default_size"
                android:background="@drawable/bg_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_3">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@android:color/transparent"
                    android:text="@string/word_registrar"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/pb_registro_de_dizimos"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    tools:visibility="visible" />


            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>





